[package]
name = "grok-is-this-true"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
openai-rust = "1.5.2"
reqwest = { version = "0.12.24", features = ["blocking", "json"]}
serde_json = "1.0.145"
serenity = "0.12.4"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
